2006-01-14  Allan Sandfeld Jensen <kde@carewolf.com>

        * rendering/render_image.cpp (calcReplacedWidth,calcReplacedHeight):
        Respect both min/max sizes and aspect-ratio when resizing.

2006-01-03  Allan Sandfeld Jensen <kde@carewolf.com>

        * css/cssparser.cpp: Allow content: normal | none
        * css/cssstyleselector.cpp: Handle content: normal | none

2005-12-09  Germain Garand  <germain@ebooksfrance.org>

        implement quirky HTML alignment ; introduce special float values
        -khtml-left/-khtml-right to this effect.

        * css/cssparser.cpp: ditto. Fix memory leak from Function struct deletion also.
        * css/cssstyleselector.cpp: ditto.
        * css/html4.css: set as default style for table[align="left/right"]
        * html/html_tableimpl.cpp (parseAttribute): remove setting of float property
        * rendering/render_block{h,cpp}: quirky HTML alignment never clears, and never cause fafs to clear.
          Only examine the last floating object on line, so as to match MSIE behaviour.
        * rendering/render_style.h: extra float enumeration values
        * css/css_renderstyledeclarationimpl.cpp (getPropertyCSSValue): adjust

2005-12-06  Dirk Mueller  <mueller@kde.org>

	* html/htmltokenizer.cpp: don't treat <!---> specially.
        fixes bug 93799.

2005-12-02  Charles Samuels  <charles@kde.org>
	rendering/bidi.cpp: don't sometimes take text far past the end
	of the block's margin on justified text.  bug #106081

2005-11-08  Germain Garand  <germain@ebooksfrance.org>

        sizing of percent objects within table cells

        * rendering/render_box.cpp (calcPercentageHeight): transfer most of the logic for table cells in render_table as
        it was partly redundant here. Don't apply the table cell sizing hacks in strict mode - no other engine does that.
        Don't forget anonymous blocks - those must not stop recursion obviously.