@@ -477,14 +477,12 @@ int RenderObject::scrollHeight() const
 
 bool RenderObject::hasStaticX() const
 {
-    return (style()->left().isVariable() && style()->right().isVariable()) ||
-            style()->left().isStatic() ||
-            style()->right().isStatic();
+    return (style()->left().isVariable() && style()->right().isVariable());
 }
 
 bool RenderObject::hasStaticY() const
 {
-    return (style()->top().isVariable() && style()->bottom().isVariable()) || style()->top().isStatic();
+    return (style()->top().isVariable() && style()->bottom().isVariable());
 }
 
 void RenderObject::setPixmap(const QPixmap&, const QRect& /*r*/, CachedImage* image)
@@ -1291,9 +1289,17 @@ void RenderObject::dirtyFormattingContext( bool checkContainer )
     m_markedForRepaint = true;
     if (layer() && (style()->position() == FIXED || style()->position() == ABSOLUTE))
         return;
-    if (m_parent && (checkContainer || style()->width().isVariable() || style()->height().isVariable() ||
-                     !(isFloating() || flowAroundFloats() || isTableCell())))
-        m_parent->dirtyFormattingContext(false);
+    if (m_parent) {
+         if (isInlineFlow()) {
+             if (!checkContainer && !m_parent->isInline())
+                 return;
+             else
+                 m_parent->dirtyFormattingContext(false);
+         } 
+         else if (checkContainer || style()->width().isVariable() || style()->height().isVariable() ||
+                     !(isFloating() || flowAroundFloats() || isTableCell()))
+             m_parent->dirtyFormattingContext(false);
+    }
 }
 
 void RenderObject::repaintDuringLayout()
